--- a/style.css
+++ b/style.css
@@ -2,4 +2,10 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  align-content: center ;
+}
+
+a {
+  padding: 10px ;
+  background-color: grey ;
 }
